# ArchGraph

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: REPO_SETTINGS.md
.github/workflows/: ci.yml
archgraph/: __init__.py  __main__.py  api.py  cli.py  config.py  export.py  manifest.py  registry.py  report.py  search.py  skills.py  tools.py
archgraph/enrichment/: __init__.py  churn.py  clustering.py  cve.py  process.py
archgraph/extractors/: __init__.py  annotations.py  base.py  call_resolver.py  clang.py  dependencies.py  git.py  scip_resolver.py  security_labels.py  treesitter.py
archgraph/extractors/deep/: __init__.py  engine.py  go.py  java.py  javascript.py  kotlin.py  lang_spec.py  python_spec.py  rust.py  swift.py  typescript.py
archgraph/graph/: __init__.py  builder.py  neo4j_store.py  schema.py
archgraph/mcp/: __init__.py  server.py
archgraph/server/: __init__.py  web.py
archgraph/tool/: __init__.py  archgraph_tool.py  impact.py
docs/: AGENT.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  CLI.md  DEEP_ANALYSIS.md  MCP.md  ROADMAP.md  SECURITY.md
docs/superpowers/plans/: 2026-03-31-code-body-storage.md  2026-03-31-scip-call-resolution.md  2026-03-31-scope-aware-call-resolution.md  2026-04-02-multi-repo-isolation.md
docs/superpowers/specs/: 2026-03-31-code-body-storage-design.md  2026-03-31-scip-call-resolution-design.md  2026-03-31-scope-aware-call-resolution-design.md  2026-04-02-multi-repo-isolation-design.md
tests/: conftest.py  test_api_interface.py  test_body_extraction.py  test_builder.py  test_call_resolver.py  test_clang.py  test_cli_e2e.py  test_cve.py  test_deep.py  test_error_handling.py  test_export_content.py  test_extractors.py  test_gitnexus_features.py  test_impact_functional.py  test_manifest.py  test_mcp_multirepo.py  test_mcp_tools.py  test_neo4j_mock.py  test_new_features.py  test_regression.py  test_schema.py  test_scip_resolver.py  test_search_functional.py  test_tool.py  test_treesitter.py
