[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archgraph"
version = "0.1.0"
description = "Source code graph extraction & Cypher query tool for reverse engineering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ArchGraph Contributors" }]

dependencies = [
    "tree-sitter>=0.24.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "neo4j>=5.0.0",
    "click>=8.1.0",
    "toml>=0.10.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
kotlin = ["tree-sitter-kotlin>=0.23.0"]
swift = ["tree-sitter-swift>=0.6.0"]
objc = ["tree-sitter-objc>=3.0.0"]
clang = ["libclang>=18.1.0"]
all = ["archgraph[kotlin,swift,objc,clang]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
archgraph = "archgraph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["archgraph"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
