[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archgraph"
version = "0.2.0"
description = "Security-first code intelligence for AI agents — taint analysis, CVE detection, MCP integration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ArchGraph Contributors" }]
keywords = ["code-analysis", "security", "knowledge-graph", "neo4j", "mcp", "ai-agents", "static-analysis", "taint-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

dependencies = [
    "tree-sitter>=0.24.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "neo4j>=5.0.0",
    "click>=8.1.0",
    "toml>=0.10.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "networkx>=3.0",
    "scipy>=1.11.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
kotlin = ["tree-sitter-kotlin>=0.23.0"]
swift = ["tree-sitter-swift>=0.6.0"]
objc = ["tree-sitter-objc>=3.0.0"]
clang = ["libclang>=18.1.0"]
all = ["archgraph[kotlin,swift,objc,clang]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
archgraph = "archgraph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["archgraph"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
